# TFM_2026_Master

./: LICENSE  README
Archivos_Python/: mqtt_to_csv.py  servidor_yolo.py
Entrenamiento_Modelo_TFM/: Entrenamiento_Random_Forest_Tesis.ipynb  Entrenamiento_YOLO_Tesis.ipynb  dataset.csv
Entrenamiento_Modelo_TFM/imagenes_yolov8_tesis/: README.dataset.txt  README.roboflow.txt  data.yaml
Entrenamiento_Modelo_TFM/imagenes_yolov8_tesis/test/labels/: test-video-00000_png_jpg.rf.af2106148ab8d10d021c98b29ade37b1.txt  test-video-00001_png_jpg.rf.6d7ef4f625aea5963863d52a48d2c638.txt  test-video-00006_png_jpg.rf.a3677581456da89273e30325dcad661b.txt  test-video-00013_png_jpg.rf.580bd96a2c7034a2f7499677e33f9366.txt  test-video-00017_png_jpg.rf.5120a01b21927153ba2313cdadd71167.txt  test-video-00024_png_jpg.rf.b5968e4257fb4143b6bf773b6ae48c0b.txt  test-video-00029_png_jpg.rf.c5609b68d2bfd513cb7861e538986c97.txt  test-video-00033_png_jpg.rf.5bb36da5dc262f5169be86482660cebe.txt  (+106 more)
TFM_2026_Master_IoT-main/TFM_2026_Master_IoT-main/: README.md
TFM_2026_Master_IoT-main/TFM_2026_Master_IoT-main/components/who_app/who_detect_app/: CMakeLists.txt  who_detect_app_lcd.cpp  who_detect_app_lcd.hpp
TFM_2026_Master_IoT-main/TFM_2026_Master_IoT-main/examples/object_detect/main/: CMakeLists.txt  app_main.cpp  frame_cap_pipeline.cpp  frame_cap_pipeline.hpp  idf_component.yml
TFM_2026_Master_IoT_Tabular-main/TFM_2026_Master_IoT_Tabular-main/: CMakeLists.txt  README.md  dataset.csv
TFM_2026_Master_IoT_Tabular-main/TFM_2026_Master_IoT_Tabular-main/main/: CMakeLists.txt  idf_component.yml  main.c
(+1058 files in other folders)
